# beancount-no-sparebank1

./: CHANGELOG.md  Dockerfile  README.md  justfile  pyproject.toml
.github/workflows/: docker-test.yml  release.yml  test.yml
docs/issues/: metadata-pattern-matching.md
examples/: README.md  local_package_test.py  project_example.py  uv_script_example.py
src/beancount_no_sparebank1/: __init__.py  balance.py  deposit.py  importer.py  statement.py
test_data/: sb1.csv.beancount
tests/: test_balance.py  test_deduplication.py  test_packaging.py  test_public_api.py
