[project]
name = "beancount-no-sparebank1"
dynamic = ["version"]
description = "A library that converts financial data from SpareBank 1 into structured Beancount accounting format."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beangulp",
    "pypdf>=5.4.0",
    "beancount-classifier",
    "pydantic>=2.10.6",
    "typing-extensions>=4.15",
]

[tool.uv]
package = true

[tool.uv.sources]
beangulp = { git = "https://github.com/beancount/beangulp", rev = "519cc461a9fe5c68c6ee55d7f90cea00d884da9c" }
beancount-classifier = { git = "https://github.com/staticaland/beancount-classifier", rev = "92b285ea2ef31b86c43772b0d1387b9bba5aed8b" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.18.2,<2",
    "pytest>=9.0.2",
    "ruff>=0.14.8",
]

[tool.hatch.build]
packages = ["src/beancount_no_sparebank1"]

[tool.hatch.version]
path = "src/beancount_no_sparebank1/version.py"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
